--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:text="欢迎使用蓝牙搜索APP"
+            android:text="欢迎使用MS导航小助手"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ff0b18c0" />
         <Button
@@ -40,7 +40,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <TextView
-                android:id="@+id/x"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_vertical_margin"
@@ -50,15 +49,9 @@
                 android:text="x轴"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ff0b18c0" />
-            <!--<Button-->
-                <!--android:id="@+id/RSSIbutton1"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:text="读RSSI"-->
-                <!--android:textColor="#ff1919c0" />-->
 
             <EditText
+                android:id="@+id/x"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxWidth="60dp"
@@ -67,7 +60,6 @@
                 android:layout_marginRight="@dimen/activity_vertical_margin"/>
 
             <TextView
-                android:id="@+id/y"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_vertical_margin"
@@ -78,16 +70,8 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="#ff0b18c0" />
 
-            <!--<Button-->
-            <!--android:id="@+id/RSSIbutton2"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
-            <!--android:text="读RSSI"-->
-            <!--android:textColor="#ff1919c0" />-->
-
             <EditText
+                android:id="@+id/y"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxWidth="60dp"
@@ -164,16 +148,5 @@
                 android:scrollbars="none"></ListView>
         </LinearLayout>
     </LinearLayout>
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Hello World!"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.5"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintVertical_bias="1.0" />-->
 
 </android.support.constraint.ConstraintLayout>
