--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:onClick="onClick_Search"
-            android:text="单击按钮以搜索蓝牙设备"
+            android:text="单击按钮开始搜索"
             android:textColor="#ff1919c0" />
         <LinearLayout
             android:layout_width="wrap_content"
@@ -81,49 +81,83 @@
 
         </LinearLayout>
 
-        <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-        android:id="@+id/RSSIbutton1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxWidth="150dp"
-        android:minWidth="150dp"
-        android:background="#ff00ff00"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:layout_gravity="center_horizontal"
-        android:text="确认"
-        android:textColor="#ff1919c0" />
-
-        <Button
-        android:id="@+id/RSSIbutton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxWidth="150dp"
-        android:minWidth="150dp"
-        android:background="#ff00ff00"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:layout_gravity="center_horizontal"
-        android:text="确认"
-        android:textColor="#ff1919c0" />
-        </LinearLayout>
-
         <Button
             android:id="@+id/buttonEnd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:onClick="onClick_End"
-            android:text="单击按钮以结束搜索"
+            android:text="单击按钮结束搜索"
             android:textColor="#ff1919c0" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:text="请输入查询间隔时间"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff0b18c0" />
+
+            <EditText
+                android:id="@+id/inputTimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="60dp"
+                android:minWidth="60dp"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:text="当前正在进行第"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff0b18c0" />
+            <TextView
+                android:id="@+id/countTimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff0b18c0" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:text="次搜索"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#ff0b18c0" />
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -132,14 +166,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:visibility="invisible" />
-
-        <Button
-            android:id="@+id/RssiThread"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="#ffff00ff"
-            android:text="new Thread" />
 
         <LinearLayout
             android:layout_width="match_parent"
