--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,29 +159,29 @@
                 android:textColor="#ff0b18c0" />
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="@android:style/Widget.ProgressBar.Large.Inverse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:visibility="invisible" />
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progressBar"-->
+            <!--style="@android:style/Widget.ProgressBar.Large.Inverse"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:visibility="invisible" />-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:orientation="vertical">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_weight="0.3"-->
+            <!--android:orientation="vertical">-->
 
-            <ListView
-                android:id="@+id/lvDevices"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="#f1f1f1"
-                android:cacheColorHint="#ff333333"
-                android:fadingEdge="none"
-                android:scrollbars="none"></ListView>
-        </LinearLayout>
+            <!--<ListView-->
+                <!--android:id="@+id/lvDevices"-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="fill_parent"-->
+                <!--android:background="#f1f1f1"-->
+                <!--android:cacheColorHint="#ff333333"-->
+                <!--android:fadingEdge="none"-->
+                <!--android:scrollbars="none"></ListView>-->
+        <!--</LinearLayout>-->
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
